<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText 
                android:id="@+id/tvMin"
                android:gravity="center"
                android:layout_weight="1.0"
                android:digits="0123456789"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView 
                android:text="@string/diagram_to"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText 
                android:id="@+id/tvMax"
                android:gravity="center"
                android:layout_weight="1.0"
                android:inputType="number"
                android:digits="0123456789"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView 
                android:text="@string/diagram_tiao"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView 
                android:id="@+id/tvSubmit"
                android:text="@string/sure"
                android:padding="5dp"
                android:textColor="@android:color/white"
                android:background="@color/bg_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loContent"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginBottom="0dp"
            android:background="@color/bg_login_btn"
            android:text="@string/change_display"
            android:textColor="@android:color/white" />
        
    </LinearLayout>
</ScrollView>