<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/running"
        android:textColor="#00c328"
        android:textSize="21sp"/>

    <TextView
        android:id="@+id/batteryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_marginTop="20dp"
        android:text="@string/battery"
        android:textSize="21sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/batteryTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/batteryTitle"
        android:layout_toRightOf="@id/batteryTitle"
        android:text="100%"
        android:textSize="21sp"/>

    <Button
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/status"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:background="#0000"
        android:padding="5dp"
        android:text="@string/read"
        android:textColor="@color/button"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/beepTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/batteryTitle"
        android:layout_marginTop="20dp"
        android:text="@string/beep"
        android:textSize="21sp"
        android:textStyle="bold"/>

    <ToggleButton
        android:id="@+id/beep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/beepTitle"
        android:layout_alignLeft="@id/battery"
        android:layout_alignStart="@id/battery"
        android:layout_toEndOf="@id/batteryTitle"
        android:layout_toRightOf="@id/batteryTitle"
        android:checked="false"/>


</RelativeLayout>
